Fixed spacing

--- a/src/app/blog/[post]/page.css
+++ b/src/app/blog/[post]/page.css
@@ -19,11 +19,15 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
+.content {
+    margin-top: -3rem;
+}
+
 .content > p {
     font-family: "Inter" ;
 }
 
-.content > ul {    
+.content > ul, ol {    
     font-family: "Inter";
     list-style-type: disc;
     list-style-position: inside;
@@ -34,3 +38,10 @@
     line-height: 3rem;
     padding-top: 4rem;
 }
+
+@media (max-width: 767px) {
+    .content > h2 {
+        line-height: 2rem;
+        padding-top: 4rem;
+    }
+  }
